funcionalidad de colores en productos y mas mejoras al diseño de la pagina

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
        </div>
 
        <!-- Boton para confirmar la compra -->
-       <button onclick="confirmaInfoCompra()">Haz click aqui</button>
+       <button onclick="muestraCompra()">Haz click aqui</button>
 
     </div>
 
@@ -68,7 +68,7 @@
     <!-- Contenedor del carrito de compra -->
     <div id="contenedor-carrito-compra">
         
-        <!-- Los productos seleccionados se mostraran aqui -->
+        <!-- La cantidad de productos se mostraran aqui -->
     
     </div>
 
